tests/fixtures/typecheck/invalid/non_bool_condition.sr
rule "EQ: Non Bool Condition" in underlying:
    when bar.close:
        then emit_signal(kind="X", reason="should_fail")

